[FEATURE] Localize strings

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<xliff version="1.0">
-    <file source-language="en" datatype="plaintext" original="project-info/Resources/Private/Language/locallang.xlf" date="2023-07-28T10:26:01Z">
+<xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
+    <file source-language="en" datatype="plaintext" original="EXT:project_info/Resources/Private/Language/locallang.xlf" product-name="project_info" date="2023-07-28T10:26:01Z">
         <header />
         <body>
             <trans-unit id="title.technicalDocumentation" resname="title.technicalDocumentation">
+                <source>Technical Documentation of "%s"</source>
                 <target>Technische Dokumentation von "%s"</target>
+            </trans-unit>
+            <trans-unit id="header.pages" resname="header.pages" approved="yes">
+                <source>Pages</source>
+                <target>Seiten</target>
+            </trans-unit>
+            <trans-unit id="header.content" resname="header.pages" approved="yes">
+                <source>Content</source>
+                <target>Inhalte</target>
+            </trans-unit>
+            <trans-unit id="pages_total" resname="pages_total" approved="yes">
+                <source>Pages total</source>
+                <target>Seiten gesamt</target>
+            </trans-unit>
+            <trans-unit id="pages_standard" resname="pages_standard" approved="yes">
+                <source>Pages standard</source>
+                <target>Standartseiten</target>
+            </trans-unit>
+            <trans-unit id="content_total" resname="content_total" approved="yes">
+                <source>Content total</source>
+                <target>Inhalte gesamt</target>
+            </trans-unit>
+            <trans-unit id="content_text" resname="content_text" approved="yes">
+                <source>Content text-only</source>
+                <target>Nur-Text Inhalte</target>
             </trans-unit>
         </body>
     </file>
