[FEATURE] Output Scheduler Tasks

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -37,7 +37,43 @@
             </trans-unit>
             <trans-unit id="be_groups.count" resname="be_groups.count">
                 <source># User</source>
-                <source># Benutzer</source>
+                <target># Benutzer</target>
+            </trans-unit>
+            <trans-unit id="tables" resname="tables">
+                <source>Typ</source>
+            </trans-unit>
+            <trans-unit id="extensions.key" resname="extensions.composer">
+                <source>Extension key</source>
+                <target>Modul</target>
+            </trans-unit>
+            <trans-unit id="extensions.composer" resname="extensions.composer">
+                <source>Composer name</source>
+                <target>Composer-Name</target>
+            </trans-unit>
+            <trans-unit id="extensions.version" resname="extensions.version">
+                <source>Version</source>
+            </trans-unit>
+            <trans-unit id="extensions.title" resname="extensions.title">
+                <source>Titel</source>
+            </trans-unit>
+            <trans-unit id="extensions.description" resname="extensions.description">
+                <source>Description</source>
+                <target>Beschreibung</target>
+            </trans-unit>
+            <trans-unit id="extensions.source" resname="extensions.source">
+                <source>Source</source>
+                <target>Quelle</target>
+            </trans-unit>
+            <trans-unit id="tx_scheduler_task.uid" resname="tx_scheduler_task.uid">
+                <source>Id</source>
+            </trans-unit>
+            <trans-unit id="tx_scheduler_task.description" resname="tx_scheduler_task.description">
+                <source>Description</source>
+                <target>Beschreibung</target>
+            </trans-unit>
+            <trans-unit id="tx_scheduler_task.groupName" resname="tx_scheduler_task.groupName">
+                <source>Group</source>
+                <target>Thema</target>
             </trans-unit>
         </body>
     </file>
