[FEATURE] Count diverse elements

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -63,6 +63,27 @@
             <trans-unit id="tx_scheduler_task.groupName" resname="tx_scheduler_task.groupName">
                 <source>Group</source>
             </trans-unit>
+            <trans-unit id="pages.total" resname="pages.total">
+                <source>Pages total</source>
+            </trans-unit>
+            <trans-unit id="pages.doktype.1" resname="pages.doktype.1">
+                <source>Normal Pages</source>
+            </trans-unit>
+            <trans-unit id="tt_content.total" resname="tt_content.total">
+                <source>Content Elements total</source>
+            </trans-unit>
+            <trans-unit id="tt_content.CType.text" resname="tt_content.CType.text">
+                <source>Content Elements "Text Only"</source>
+            </trans-unit>
+            <trans-unit id="sys_file.type.2" resname="sys_file.type.2">
+                <source>Images</source>
+            </trans-unit>
+            <trans-unit id="sys_file.type.4" resname="sys_file.type.4">
+                <source>Videos</source>
+            </trans-unit>
+            <trans-unit id="sys_file.mime_type.application/pdf" resname="sys_file.mime_type.application/pdf">
+                <source>PDF</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
